CMake unity build files trigger clang-tidy "bugprone-suspicious-include" warning
D:\builds\blahblah\Unity\unity_2_cxx.cxx:3:11: warning: suspicious #include of file with '.cpp' extension [bugprone-suspicious-include]
#include "D:/tests.cpp"
^
It would be nice if the unity file that cmake generates could also add //NOLINTNEXTLINE(bugprone-suspicious-include) above each #include to squash this warning.
Edited by Michael Jones