Unity: Suppress clang-tidy 'bugprone-suspicious-include' warning

Unity builds intentionally include entire source files.

Fixes: #24857